Add events search service and controller