@@ -13,11 +13,14 @@ import lt.techin.eventify.model.User;
 import lt.techin.eventify.repository.CategoryRepository;
 import lt.techin.eventify.repository.EventRepository;
 import lt.techin.eventify.repository.UserRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.security.Principal;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class EventService {
@@ -27,7 +30,8 @@ public class EventService {
   private final UserRepository userRepository;
   private final EventMapper eventMapper;
 
-  public EventService(EventRepository eventRepository, CategoryRepository categoryRepository, UserRepository userRepository, EventMapper eventMapper) {
+  public EventService(EventRepository eventRepository, CategoryRepository categoryRepository,
+                      UserRepository userRepository, EventMapper eventMapper) {
     this.eventRepository = eventRepository;
     this.categoryRepository = categoryRepository;
     this.userRepository = userRepository;
@@ -93,12 +97,31 @@ public class EventService {
 
     return events.stream()
             .map(eventMapper::toEventResponse)
-            .collect(Collectors.toList());
+            .toList();
   }
 
   public List<EventResponse> getAllEvents() {
     return eventRepository.findAll().stream()
             .map(eventMapper::toEventResponse)
-            .collect(Collectors.toList());
+            .toList();
+  }
+
+  public Page<EventResponse> findEventsByFilters(String categoryName, String city, LocalDateTime startDateTime,
+                                                 LocalDateTime endDateTime, String experienceLevel,
+                                                 Integer minAge, Integer maxAge, String searchTerm, Pageable pageable) {
+
+    if (categoryName != null && !categoryName.isEmpty()) {
+      categoryRepository.findByName(categoryName)
+              .orElseThrow(() -> new CategoryNotFoundException("Category '" + categoryName + "' not found"));
+    }
+
+    Page<Event> eventPage = eventRepository.findEventsByFilters(categoryName, city, startDateTime, endDateTime,
+            experienceLevel, minAge, maxAge, searchTerm, pageable);
+
+    List<EventResponse> eventResponses = eventPage.getContent().stream()
+            .map(eventMapper::toEventResponse)
+            .toList();
+
+    return new PageImpl<>(eventResponses, pageable, eventPage.getTotalElements());
   }
 }
